objects/tffa__ApplicationMetrics__c.object
<CustomObject>
    <description>Quantitive measure of an application&apos;s characteristics for a product. e.g. Time taken to fill the application</description>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The financial product for which the metrics hold.</description>
        <label>Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Application Metrics</relationshipLabel>
        <relationshipName>ApplicationMetrics</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__TimeToFill__c</fullName>
        <description>Average time taken (in mins) to fill details of an application with one applicant.</description>
        <label>Time to fill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Metrics</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>